--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
-  <script>var exports = {"__esModule": true};</script>
-  <script src="dist/app.js" defer></script>
 </head>
 <body>
   <template id="form">
@@ -41,5 +39,6 @@
     </section>
   </template>
   <div id="app"></div>
+  <script src="bundle.js" defer></script>
 </body>
 </html>
