完成拖曳功能

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
+  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 <body>
   <template id="form">
@@ -42,6 +43,7 @@
       <ul></ul>
     </section>
   </template>
+
   <div id="app"></div>
   <script src="bundle.js" defer></script>
 </body>
