修復拖曳區域無法正常監聽的bug : 原因為元素本身沒有高度，所以沒有物件時就偵測不到...

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </template>
 
   <template id="list">
-    <section class="projects">
+    <section class="projects" style="width:500px;min-height:200px">
       <header>
         <h2></h2>
       </header>
