--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 <body>
   <template id="form">
-    <form>
-      <div class="form-control">
-        <label for="title">Title</label>
+    <form class="form">
+      <div class="form-control top-form">
+        <div>
+          <label for="title">Title</label>
         <input id="title" type="text">
+        </div>
+        <div>
+          <label for="people">People</label>
+        <input id="people" type="number" step="1" min="0" max="10"/>
+        </div>
       </div>
       <div class="form-control">
         <label for="description">Description</label>
         <textarea id="description" rows="3"></textarea>
       </div>
-      <div class="form-control">
-        <label for="people">People</label>
-        <input id="people" type="number" step="1" min="0" max="10"/>
+      <div class="form-submit">
+        <button class="primary-button" type="submit">ADD PROJECT</button>
       </div>
-      <button type="submit">ADD PROJECT</button>
     </form>
   </template>
   
       
   <template id="single">
-    <li draggable="true">
+    <li class="project-item" draggable="true">
       <h2></h2>
       <h3></h3>
       <p></p>
@@ -36,15 +39,18 @@
   </template>
 
   <template id="list">
-    <section class="projects" style="width:500px;min-height:200px">
+    <section class="projects">
       <header>
         <h2></h2>
       </header>
       <ul></ul>
     </section>
   </template>
-
-  <div id="app"></div>
+  
+  <h1 class="web-title">Typscript OOP(物件導向)實作</h1>
+  <div id="app" class="div-container">
+    
+  </div>
   <script src="bundle.js" defer></script>
 </body>
 </html>
